--- a/hello.html
+++ b/hello.html
@@ -6,7 +6,7 @@
     <title>Git</title>
 </head>
 <body>
-    <h1 style="color: blue;">Working on git repositories</h1>
+    <h1 style="color: red;">Working on git repositories</h1>
     <p>Hello World!</p>
     <h2>Second header</h2>
 </body>
