--- a/hello.html
+++ b/hello.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1 style="color: blue; text-align: center;">Working on git repositories</h1>
-    <p>Hello World!</p>
+    <p>Hello World😁!</p>
     <h2>Second header</h2>
 </body>
 </html>
